--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18",
-    "styled-components": "^6.1.1"
+    "react-hook-form": "^7.49.2",
+    "styled-components": "^6.1.1",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
@@ -31,6 +38,7 @@
     "@storybook/test": "^7.6.5",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-content-loader": "^4.0.0",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
