--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint --dir src",
     "format": "next lint --fix --dir src",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -36,6 +37,8 @@
     "@storybook/nextjs": "^7.6.5",
     "@storybook/react": "^7.6.5",
     "@storybook/test": "^7.6.5",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-content-loader": "^4.0.0",
@@ -50,6 +53,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.15",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.1.1",
     "storybook": "^7.6.5",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
