--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,10 @@
   "extends": [
     "next/core-web-vitals",
     "plugin:storybook/recommended"
-  ]
+  ],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
+  "rules": {
+    "@typescript-eslint/no-empty-function": "off"
+  }
 }
